# sciml_demos

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: installation.yml
docs/: DMD_documentation.md  index.md  pinn.md  simulate_documentation.md
koopman/: dmd.py  simulate.py
notebooks/: koopman_for_nonlinear_dynamics.ipynb  pinn_and_fd_for_a_pde.ipynb
src/koopman/: dmd.py  simulate.py  visualizations.py
src/pinn/: pinn.py
tests/: test_simulate.py
