[tool.poetry]
name = "koopman"
version = "0.1.0"
description = "Exploration of data driven methods for non-linear dynamics analysis."
authors = ["JuLieAlgebra <julieannabacon2014@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
matplotlib = "*"
pre-commit = "*"
torch = "*"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
